2008-08-12  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilderTest.cs: Add new test for #416632.

2008-07-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInstTest.cs: Regression test for #412965.

2008-07-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: New test for the regression found by
	bug-333798-tb.2.cs.

	* MethodOnTypeBuilderInstTest.cs: Renable some CompilerContext
	tests.

2008-07-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Disable the special behavior of GetMethod
	under compiler behavior as mcs has been fixed.

2008-07-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Added tests for the special cased behavior
	of GetMethod.

2008-07-17 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInstTest.cs: Disable new tests as the change
	that made then work was reverted.

2008-07-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInstTest.cs: Added test for stuff under compiler
	context.

2008-06-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* ModuleBuilderTest.cs: Added test for DefineType with interface as
	parent.
	* TypeBuilderTest.cs: Added test for SetParent with interface as
	parent. Added test for CreateType of an interface with invalid parent.
	Added tests for checks in DefineGenericParameters. Improved test
	for MakeGenericType, and added tests for argument checks in
	MakeGenericType.

2008-06-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Fixed previous tests to follow the suite 
	convention. Added tests for bugs #349194 and #400643.

2008-06-17 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Added tests for retrieving custom attributes from
	generic instances of SRE types.

2008-06-11  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilderTest.cs (GetField): Add a test for calling GetField on an
	open generic type.

2008-06-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Added test for bug #399047.
